--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^6.2.1",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-progress": "^1.1.1",
     "@radix-ui/react-radio-group": "^1.2.2",
@@ -18,6 +19,7 @@
     "framer-motion": "^11.18.0",
     "lucide-react": "^0.471.1",
     "next": "14.2.15",
+    "prisma": "^6.2.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.6.0",
