feat(dashboard): Ajout des fonctionnalités d'export Excel et PDF
- Intégration des boutons d'export Excel et PDF responsifs
- Ajout des fonctions exportToExcel et exportToPDF
- Design moderne avec icônes et effets de survol
- Adaptation mobile (texte masqué, icônes uniquement)
- Support multilingue pour les exports

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-DATABASE_URL="postgresql://postgres:kWMwpErxuaGmBtqQipZrBdkEiWAoCgox@junction.proxy.rlwy.net:41092/railway"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/test_aptitudes"
+
